--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </header>
 
-      <main>
+      <main class="main">
         <div class="items">
           <img src="./image/photo1.png" alt="" />
           <img src="./image/photo2.png" alt="" />
@@ -42,10 +42,10 @@
           <img src="./image/photo6.png" alt="" />
         </div>
       </main>
-
-      <footer class="footer">
-        <p>Created By Ammar - devChallenges.io</p>
-      </footer>
     </div>
+
+    <footer class="footer">
+      <p>Created By Ammar - devChallenges.io</p>
+    </footer>
   </body>
 </html>
